# AI1O

.claude/: settings.local.json
AI1O_org/: CLAUDE.md  README.md
AI1O_org/.claude/: settings.json  settings.local.json
AI1O_org/tools/amptalk-masking/: .gitignore  CLAUDE.md  README.md  masking_tool.py
AI1O_org/tools/data-masking/: .gitignore  README.md  install_ginza.py  mask_text.py  pyproject.toml  requirements.txt
agents/: job-customer-success.md  job-field-sales.md
ai-agents/: move_output.py
ai-agents/app/: README.md  app.py  config.py
ai-agents/app/templates/: index.html
ai-agents/output/task-ui-sketch-creator_20251023_005819/: analysis.json
app/: app.py
app/templates/: index.html
project/AIエラー解決/: 企画書.md
task-agents/: README_FOLDER_RENAME.md  start.sh
task-agents-extension/: README.md  manifest.json
task-agents-extension/agents/: agent-templates.js
task-agents-extension/background/: background.js
task-agents-extension/content/: content.js
task-agents-extension/native_host/: host.js  host.json
task-agents-extension/popup/: popup.css  popup.html  popup.js
task-agents/agents/: task-product-feature-doc-creator.md  task-ui-sketch-creator.md  task-ui-wireframe-creator.md
task-agents/agents/ui-sketch-creator/: readme.md
task-agents/agents/ui-sketch-json-creator/: readme.md
task-agents/app/: app.py  config.py
task-agents/app/templates/: index.html
task-agents/output/: .gitkeep
task-agents/output/task-ui-sketch-creator_20251023_005819/: output.txt  result.md
variable/: 企画書.md  企画書テンプレート.md  企画書テンプレート（記入例付き）.md
(+35 files in other folders)
