[tool.poetry]
name = "claude-masking"
version = "0.1.0"
description = "テキストファイル内の会社名と個人名をマスキングするCLIツール"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.7.4"
ginza = "^5.2.0"
ja-ginza = "^5.2.0"
click = "^8.1.7"

[tool.poetry.scripts]
mask-text = "mask_text:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true